Notify the imcompleteness at the index page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 Jai Hyun Park
             </div>
             <p>
+                <b style='font-size:45pt'>Under Construction</b>: <br><br>
                 Hi, I'm <b style='font-size:30pt'>Jai Hyun Park</b>.
+                This site is <b style='font-size:25pt'>incomplete</b>.
+                There might be <b>wrong information</b>, typos, and many other possible <b style='font-size:20pt'>errors</b>.<br>
+                Last update: <b style='font-size:15pt'>9 Dec 2019</b>
             </p>
         </div>
 
