Minor changes: link-icon & image width adjustment

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
         <section class="_track _content-section _article-section" id = "trivia">
             <div class='flex-block'>
-                <img src='data/1530031945830.jpg' style='width:30%;margin:0px 120px;margin-bottom:50px'/>
+                <img src='data/1530031945830.jpg' style='max-width:400px;width:50%;margin:0px 120px;margin-bottom:50px'/>
 
                 <div class='narrow-piece'>
                     <h1 style='font-family: "noto-eng-b", "noto-kor-b";margin-bottom:30px;font-size:23pt;text-align:left'>
