--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class='_profile'>
                 <div style='color:rgb(255,255,164)'>
                     ABOUT
-                    <a href='about.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px'/></a>
+                    <a href='about.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                 </div>
                 <p>
                     Hi, I'm <b style='font-size:40pt'>Jai Hyun Park</b>.
@@ -79,7 +79,7 @@
             <div class='_profile'>
                 <div style='color:rgb(180,180,230)'>
                     RESUME
-                    <a href='resume.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px'/></a>
+                    <a href='resume.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                 </div>
                 <p>
                     Hi, I'm <b>Jai Hyun Park</b>.
@@ -94,7 +94,7 @@
             <div class='_profile'>
                 <div style='color:rgb(200,255,200)'>
                     POSTS
-                    <a href='posts.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px'/></a>
+                    <a href='posts.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                 </div>
                 <p>
                     Sorry, I do not have any post yet.
@@ -108,7 +108,7 @@
                 <div style='color:rgb(159,159,159)'>
                     <!-- <img src = "data/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                     CONTACT
-                    <a href='contact.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px'/></a>
+                    <a href='contact.html'><img src='data/link-open-solid-white.png' style='width:25px;height:25px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                 </div>
                 <p>
                     <b style='font-size:30pt'>Contact</b> me with some <b style='font-size:20pt'>links!</b>
