--- a/resume.html
+++ b/resume.html
@@ -177,7 +177,7 @@
                 <ul class='brief-ul'>
                     <li>   
                         <h1>
-                            Towards a Practical Cluster Analysis over Encrypted Data<a href='http://eprint.iacr.org/2019/465'><img src='data/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px'/></a>
+                            Towards a Practical Cluster Analysis over Encrypted Data<a href='http://eprint.iacr.org/2019/465'><img src='data/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p>Jung Hee Cheon, Duhyeong Kim, <b>Jai Hyun Park</b></p>
                         <p>@Selected Areas in Cryptography 2019 Preceeding</p>
@@ -185,7 +185,7 @@
 
                     <li>   
                         <h1>
-                            Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page'><img src='data/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px'/></a>
+                            Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page'><img src='data/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p>Hee Hoon Kim, Seung Hyo Kang, <b>Jai Hyun Park</b>, Hyun Ho Ha, Jin soo Lim, Dong Hoon Lim</p>
                         <p>@The Korean Journal of Applied Statistics, vol.24, no.6, pp.1181-1196, 2011</p>
