--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<div lang="en">
+<html lang="en" style='display:none'>
 
 <head>
-    <!-- Redirect to error page if no javascript -->
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
+    <script async src='manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- css set -->
-    <link rel="stylesheet" href="style.css?v=0.1.5" />
+
     <style>
         .gform {
             position: relative;
@@ -203,8 +203,8 @@
                 CONTACT
             </div>
             <p>
-                <b style='font-size:30pt'>Contact</b> me with the <b style='font-size:20pt'>links below!</b>
-                <b>Or,</b> You can drop me a <b style='font-size:40pt'>memo!</b>
+                <b style='font-size:25pt'>Contact</b> me with the <b style='font-size:22pt'>links below!</b>
+                <b>Or,</b> You can drop me a <b style='font-size:30pt'>memo!</b>
             </p>
         </div>
 
@@ -275,7 +275,6 @@
         var section_name = 'CONTACT';
     </script>
     <script src="jquery.js"></script>
-    <script src="javascript.js?v=0.1.5"></script>
     <script data-cfasync="false" src="form-submission-handler.js"></script>
 
 </body>
