--- a/posts.html
+++ b/posts.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<div lang="en">
+<html lang="en" style='display:none'>
 
 <head>
-    <!-- Redirect to error page if no javascript -->
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
+    <script async src='manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- css set -->
-    <link rel="stylesheet" href="style.css?v=0.1.5" />
-
     <!-- title -->
     <title>Jai Hyun Park</title>
-    
+
 </head>
 
 <!-- <body style='cursor:url("data/cursor.png"), auto'> -->
@@ -64,19 +61,7 @@
 
 
     <!-- footer -->
-    <footer class="_track" style='background-image:url(data/20180922_183635-min.jpg)'>
-        <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
-
-        <div class='_footer-line'>
-            <a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a>
-            <p>
-                This is the beta version of my resume page.<br>
-                You can see the codes on my github.
-            </p>
-        </div>
-
-        <div class="_goto-top"><img src='data/arrow-up.png'/></div>
-    </footer>
+    <footer class="_track" style='background-image:url(data/20180922_183635-min.jpg)'></footer>
 
 
     <!-- javascript -->
@@ -85,8 +70,6 @@
         var section_name = 'POSTS';
     </script>
     <script src="jquery.js"></script>
-    <script src="javascript.js?v=0.1.5"></script>
-    <script data-cfasync="false" src="form-submission-handler.js"></script>
 
     <!-- <img id="mycursor1" style="position:absolute;top:0;left:0;z-index:999;" src="data/cursor.png">
     <img id="mycursor2" style="position:absolute;top:0;left:0;z-index:998;" src="data/cursor.png">
