add missing files

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
-    <script async src='manage-version.js'></script>
+    <script async src='js/manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
@@ -194,12 +194,12 @@
     <div class='menubar'></div>
 
     <!-- header -->
-    <header class="_track" id='header' style='background-image:url(data/20180519-hello-min.JPG)'>
+    <header class="_track" id='header' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'>
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
             <div>
-                <!-- <img src = "data/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
+                <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                 CONTACT
             </div>
             <p>
@@ -207,14 +207,14 @@
                 <b>Or,</b> You can drop me a <b style='font-size:30pt'>memo!</b>
             </p>
         </div>
-
-        <div class="_see-more">
-            <div>
-                Contact me!
-            </div>
-            <img src = 'data/arrow-down.png'/>
-        </div>
     </header>
+
+    <div class="_see-more">
+        <div>
+            Contact me!
+        </div>
+        <img src = 'assets/icons/arrow-down.png'/>
+    </div>
 
     <div class='_contents'>
 
@@ -265,7 +265,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="_track" id='footer' style='background-image:url(data/20180519-hello-min.JPG)'>
+    <footer class="_track" id='footer' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'>
     </footer>
     
     
@@ -274,7 +274,7 @@
         var theme_color = '159,159,159';
         var section_name = 'CONTACT';
     </script>
-    <script src="jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <script data-cfasync="false" src="form-submission-handler.js"></script>
 
 </body>
