--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
 
 <head>
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
-    <script async src='manage-version.js'></script>
+    <script async src='js/manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
@@ -14,18 +14,18 @@
 
 </head>
 
-<!-- <body style='cursor:url("data/cursor.png"), auto'> -->
+<!-- <body style='cursor:url("assets/imgs/cursor.png"), auto'> -->
 <body>
 
     <div class='menubar'></div>
 
     <!-- header -->
-    <header class="_track" id='header' style='background-image:url(data/20180922_183635-min.jpg)'>
+    <header class="_track" id='header' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'>
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
             <div>
-                <!-- <img src = "data/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
+                <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                 POSTS
             </div>
             <p>
@@ -33,13 +33,13 @@
             </p>
         </div>
 
-        <div class="_see-more">
-            <div>
-                See more details!
-            </div>
-            <img src = 'data/arrow-down.png'/>
-        </div>
     </header>
+    <div class="_see-more">
+        <div>
+            See more details!
+        </div>
+        <img src = 'assets/icons/arrow-down.png'/>
+    </div>
 
     
     <!-- contents -->
@@ -61,7 +61,7 @@
 
 
     <!-- footer -->
-    <footer class="_track" style='background-image:url(data/20180922_183635-min.jpg)'></footer>
+    <footer class="_track" style='background-image:url(assets/imgs/20180922_183635-min.jpg)'></footer>
 
 
     <!-- javascript -->
@@ -69,13 +69,13 @@
         var theme_color = '200,255,200';
         var section_name = 'POSTS';
     </script>
-    <script src="jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
-    <!-- <img id="mycursor1" style="position:absolute;top:0;left:0;z-index:999;" src="data/cursor.png">
-    <img id="mycursor2" style="position:absolute;top:0;left:0;z-index:998;" src="data/cursor.png">
-    <img id="mycursor3" style="position:absolute;top:0;left:0;z-index:997;" src="data/cursor.png">
-    <img id="mycursor4" style="position:absolute;top:0;left:0;z-index:996;" src="data/cursor.png">
-    <img id="mycursor5" style="position:absolute;top:0;left:0;z-index:995;" src="data/cursor.png">
+    <!-- <img id="mycursor1" style="position:absolute;top:0;left:0;z-index:999;" src="assets/imgs/cursor.png">
+    <img id="mycursor2" style="position:absolute;top:0;left:0;z-index:998;" src="assets/imgs/cursor.png">
+    <img id="mycursor3" style="position:absolute;top:0;left:0;z-index:997;" src="assets/imgs/cursor.png">
+    <img id="mycursor4" style="position:absolute;top:0;left:0;z-index:996;" src="assets/imgs/cursor.png">
+    <img id="mycursor5" style="position:absolute;top:0;left:0;z-index:995;" src="assets/imgs/cursor.png">
     <script type="text/javascript">
         var mouseX = 0;
         var mouseY = 0; 
