--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <head>
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
-    <script async src='manage-version.js'></script>
+    <script async src='js/manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
@@ -19,12 +19,12 @@
     <div class='menubar'></div>
 
     <!-- header -->
-    <header class="_track" id='header' style='background-image:url(data/20190814-sac2019.jpg)'>
+    <header class="_track" id='header' style='background-image:url(assets/imgs/20190814-sac2019.jpg)'>
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
             <div>
-                <!-- <img src = "data/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
+                <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                 RESUME
             </div>
             <p>
@@ -34,13 +34,13 @@
             </p>
         </div>
 
-        <div class="_see-more">
-            <div>
-                See more details!<br>
-            </div>
-            <img src = 'data/arrow-down.png'/>
-        </div>
     </header>
+    <div class="_see-more">
+        <div>
+            See more details!<br>
+        </div>
+        <img src = 'assets/icons/arrow-down.png'/>
+    </div>
 
     
     <!-- contents -->
@@ -174,7 +174,7 @@
                 <ul class='brief-ul'>
                     <li>   
                         <h1>
-                            Towards a Practical Cluster Analysis over Encrypted Data<a href='http://eprint.iacr.org/2019/465'><img src='data/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Towards a Practical Cluster Analysis over Encrypted Data<a href='http://eprint.iacr.org/2019/465'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p>Jung Hee Cheon, Duhyeong Kim, <b>Jai Hyun Park</b></p>
                         <p>@Selected Areas in Cryptography 2019 Preceeding</p>
@@ -182,7 +182,7 @@
 
                     <li>   
                         <h1>
-                            Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page'><img src='data/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p>Hee Hoon Kim, Seung Hyo Kang, <b>Jai Hyun Park</b>, Hyun Ho Ha, Jin soo Lim, Dong Hoon Lim</p>
                         <p>@The Korean Journal of Applied Statistics, vol.24, no.6, pp.1181-1196, 2011</p>
@@ -270,7 +270,7 @@
 
 
     <!-- footer -->
-    <footer class="_track" id='footer' style='background-image:url(data/20190814-sac2019.jpg)'></footer>
+    <footer class="_track" id='footer' style='background-image:url(assets/imgs/20190814-sac2019.jpg)'></footer>
 
 
     <!-- javascript -->
@@ -278,6 +278,6 @@
         var theme_color = '180,180,230';
         var section_name = 'RESUME'
     </script>
-    <script src="jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
 </body>
