Develop for Post & Minor Changes
1.Better solution for FUOC
2.post-sample.html
3.delete THEME-COLOR

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,6 @@
 
 <head>
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
-    <script async src='js/manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
@@ -194,11 +193,11 @@
     <div class='menubar'></div>
 
     <!-- header -->
-    <header class="_track" id='header' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'>
+    <header class="_track tall-header" id='header' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'>
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <div>
+            <div style='color:rgb(159,159,159)'>
                 <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                 CONTACT
             </div>
@@ -218,7 +217,7 @@
 
     <div class='_contents'>
 
-        <nav class="_nav-bar _navbar-collapse __nav-default">
+        <nav class="_nav-bar _navbar-collapse">
             <div class='section-updown'>
                 <div class='section-up'>∧</div>
                 <div class='section-down'>∨</div>
@@ -271,10 +270,10 @@
     
     <!-- javascript -->
     <script>
-        var theme_color = '159,159,159';
         var section_name = 'CONTACT';
     </script>
     <script src="js/jquery.js"></script>
+    <script src='js/manage-version.js'></script>
     <script data-cfasync="false" src="form-submission-handler.js"></script>
 
 </body>
