--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
-    <script async src='js/manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
@@ -18,7 +17,7 @@
     <div class='menubar'></div>
 
     <!-- header -->
-    <header class="_track" id='header'>
+    <header class="_track tall-header" id='header'>
         <div class='_overlay' style="background-color: rgb(24,24,30)"></div>
 
         <div class='_profile'>
@@ -36,7 +35,6 @@
         </div>
 
     </header>
-
     <div class="_see-more">
         <div>
             See my contents
@@ -47,7 +45,7 @@
     
     <!-- contents -->
     <div class="_contents">
-        <nav class="_nav-bar _navbar-collapse __nav-default">
+        <nav class="_nav-bar _navbar-collapse">
             <div class='section-updown'>
                 <div class='section-up'>∧</div>
                 <div class='section-down'>∨</div>
@@ -121,10 +119,10 @@
 
     <!-- javascript -->
     <script>
-        var theme_color = '255,255,244';
         var section_name = 'INDEX'
     </script>
     <script src="js/jquery.js"></script>
+    <script src='js/manage-version.js'></script>
     <!-- <script>$('#about').load('about.html #header');</script> -->
 
 </body>
