--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,6 @@
 
 <head>
     <noscript><meta http-equiv="refresh" content="0;url=noscript.html"></noscript>
-    <script async src='js/manage-version.js'></script>
 
     <!-- meta set -->
     <meta charset="utf-8" />
@@ -20,11 +19,11 @@
     <div class='menubar'></div>
 
     <!-- header -->
-    <header class="_track" id='header' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'>
+    <header class="_track tall-header" id='header' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'>
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <div>
+            <div style='color:rgb(200,255,200)'>
                 <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                 POSTS
             </div>
@@ -46,7 +45,7 @@
     <div class="_contents">
 
         <!-- navigation -->
-        <nav class="_nav-bar _navbar-collapse __nav-default">
+        <nav class="_nav-bar _navbar-collapse">
             <div class="_toggle"></div>
             
             <ul class="_nav-menu">
@@ -66,10 +65,10 @@
 
     <!-- javascript -->
     <script>
-        var theme_color = '200,255,200';
         var section_name = 'POSTS';
     </script>
     <script src="js/jquery.js"></script>
+    <script src='js/manage-version.js'></script>
 
     <!-- <img id="mycursor1" style="position:absolute;top:0;left:0;z-index:999;" src="assets/imgs/cursor.png">
     <img id="mycursor2" style="position:absolute;top:0;left:0;z-index:998;" src="assets/imgs/cursor.png">
