Update Index Page & Posts

--- a/about.html
+++ b/about.html
@@ -21,16 +21,15 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <div style='color:rgb(255,255,164)'>
+            <a href='/about.html' style='color:rgb(255,255,164)'>
                 ABOUT
-            </div>
+            </a>
             <p>
                 Hi, I'm <b style='font-size:30pt'>Jai Hyun Park</b>.
                 I live in <b style='font-size:22pt'>Seoul</b>, Republic of Korea.
                 I love spending time on <b>playing piano</b>, <b>programming</b>, and <b style='font-size:25pt'>goofing around</b>.
                 My favorite movie is 'Eternal Sunshine of the Spotless Mind'.
             </p>
-        </div>
 
     </header>
     <div class="_see-more">
@@ -145,8 +144,8 @@
                 <div>
                     <h1>Piano</h1>
                     <p>
-                        I used to play piano for fun since I was 5 years old.
-                        I am not a big pro, but I love to play it. 
+                        I play piano since I was 5.
+                        I love to play it. 
                         My favorite composers are Chopin and Bach.
                     </p>
                 </div>
@@ -191,7 +190,7 @@
             </div>
         </section>
 
-        <section class="_track _content-section _article-section" id = "upcoming-events" style='background-color:rgba(184,184,184,0.8)'>
+        <!-- <section class="_track _content-section _article-section" id = "upcoming-events" style='background-color:rgba(184,184,184,0.8)'>
             <h1>Upcoming Events</h1>
             <hr>
             <div class = 'big-piece'>
@@ -212,7 +211,7 @@
                 </ul>
 
             </div>
-        </section>            
+        </section>             -->
 
     </div>
 
