--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,15 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <div style='color:rgb(159,159,159)'>
+            <a href='/contact.html' style='color:rgb(159,159,159)'>
                 <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
                 CONTACT
-            </div>
+            </a>
             <p>
                 <b style='font-size:25pt'>Contact</b> me with the <b style='font-size:22pt'>links below!</b>
                 <b>Or,</b> You can drop me a <b style='font-size:30pt'>memo!</b>
             </p>
-        </div>
+        </adiv>
     </header>
 
     <div class="_see-more">
