--- a/resume.html
+++ b/resume.html
@@ -22,16 +22,15 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <div style='color:rgb(180,180,230)'>
-                <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
+            <a href='/resume.html' style='color:rgb(180,180,230)'>
                 RESUME
-            </div>
+            </a>
             <p>
                 Hi, I'm <b>Jai Hyun Park</b>.
                 I am an <b>student</b> at <b>Seoul National University</b>, majoring <b>mathematical sciences</b>.
                 Currently, I am interested in <b>cryptography</b>: espeically on Homomorphic Encryption and Verifiable Computing.
             </p>
-        </div>
+        </adiv>
 
     </header>
     <div class="_see-more">
