--- a/tags.html
+++ b/tags.html
@@ -24,14 +24,16 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='wide-piece post-info'>
-            <p class='post-title'>
+            <p class='post-title' style='color:rgb(200,255,200)'>
                 ALL TAGS
             </p>
 
             <div style='background-color: rgba(24,24,32,0.9);margin-top:20px;padding:15px;border-radius:10px' id='all-tags'>
                 <ul class='post-keywords'>
-                    <li class='post-keyword'><a href='tags.html#personal' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>personal</a></li>
-                    <li class='post-keyword'><a href='tags.html#page-manual' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>page-manual</a></li>
+                    <li class='post-keyword'><a href='tags.html#personal' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        personal</a></li>
+                    <li class='post-keyword'><a href='tags.html#page-manual' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        page-manual</a></li>
                 </ul>
             </div>
     
@@ -47,17 +49,17 @@
         <hr style='border:none!important'>
 
 
-        <section class='_track narrow-piece tagged-posts load-posts' id='personal'>
+        <section class='_track narrow-piece load-tagged-posts' id='personal'>
             <h1>personal</h1>
-            <ul class='post-with-description load-all-posts' style='margin-top:20px'>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
                 <li src='posts/site-manual.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
                 <li src='posts/post-sample.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
         </section>
 
-        <section class='_track narrow-piece tagged-posts load-posts' id='page-manual'>
+        <section class='_track narrow-piece load-tagged-posts' id='page-manual'>
             <h1>page-manual</h1>
-            <ul class='post-with-description load-all-posts' style='margin-top:20px'>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
                 <li src='posts/site-manual.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
                 <li src='posts/post-sample.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
