korean font & index page

--- a/index.html
+++ b/index.html
@@ -15,30 +15,26 @@
 </head>
 
 <body>
-    <div class='load-menubar'></div>
+    <div class='load-menubar' style=></div>
 
     <!-- header -->
     <header class="_track tall-header fixed" id='header'>
-        <div class='_overlay' style="background-color: rgb(24,24,30)"></div>
+        <div class='_overlay' style="background-color: rgb(58,58,70)"></div>
 
         <div class='_profile'>
-            <a style='font-size:35pt'>
-                <img src='assets/imgs/profile-picture.png' style='width:200px;position:relative;margin:auto'>
+            <a style='font-size:25pt'>
+                <img src='assets/imgs/profile-picture.png' style='width:160px;position:relative;margin:auto'>
                 Jai Hyun Park
             </a>
             <p>
-                <b style='font-size:45pt'>Under <br> Construction</b> <br><br>
-                Hi, I'm <b style='font-size:30pt'>Jai Hyun Park</b>.
-                This site is <b style='font-size:25pt'>incomplete</b>.
-                There might be <b>wrong information</b>, typos, and many other possible <b style='font-size:20pt'>errors</b>.<br>
-                Last update: <b style='font-size:15pt'>9 Dec 2019</b>
+                <b style='font-size:20pt'>Under <br> Construction</b> <br><br>
             </p>
         </adiv>
 
     </header>
 
     <section id='empty-header' class='_track tall-header'></section>
-    <div class="_see-more">
+    <div class="_see-more" style='background-color:rgb(24,24,32);'>
         <div>
             See my contents
         </div>
