--- a/tags.html
+++ b/tags.html
@@ -25,7 +25,7 @@
 
         <div class='wide-piece post-info'>
             <p class='post-title' style='color:rgb(200,255,200)'>
-                ALL TAGS
+                TAGS
             </p>
 
             <div style='background-color: rgba(24,24,32,0.9);margin-top:20px;padding:15px;border-radius:10px' id='all-tags'>
