--- a/posts.html
+++ b/posts.html
@@ -14,7 +14,6 @@
 
 </head>
 
-<!-- <body style='cursor:url("assets/imgs/cursor.png"), auto'> -->
 <body>
 
     <div class='load-menubar'></div>
@@ -46,16 +45,25 @@
         <!-- navigation -->
         <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
 
-        <section class='_track post-section' id='recent-posts'>
+        <!-- <section class='_track post-section' id='recent-posts'>
             <h1>Recent Posts</h1>
             <div class='wide-piece' style='background-color: rgba(200,255,200,0.3);margin:20px auto;padding:10px'>
                 <ul class='grid-3-1-ul maxheight-abstract-ul load-recent-posts load-posts'></ul>
             </div>
-            <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt'>See more posts at <a href='all-posts.html'>HERE</a></p>
+            <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt'>See more posts at <a href='posts.html'>HERE</a></p>
+        </section> -->
+        <section class='_track post-section big-piece' style='padding:50px 0px;margin:0px auto'>
+            <div class='load-slice-posts' id='all-posts'>
+                <ul class='load-posts' style='border-top:1pt gray solid;border-bottom:1pt solid gray;padding:10px 0px'>
+                    <li src='posts/site-manual.html'><p class='load-post-title'></p><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><a class='post-link'>..More</a></li>
+                    <li src='posts/post-sample.html'><p class='load-post-title'></p><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><a class='post-link'>..More</a></li>
+                </ul>
+                <div><div class='first'>≪</div><div class='prev'>＜</div><div class='number'>1/</div><div class='next'>＞</div><div class='last'>≫</div></div>
+            </div>
         </section>
 
 
-        <section class='_track post-head post-section' id='tags'>
+        <!-- <section class='_track post-head post-section' id='tags'>
             <h1>Selected Tags</h1>
             <div class='narrow-piece hot-tags'>
                 <ul class='post-keywords'>
@@ -64,7 +72,7 @@
                 </ul>
             </div>
             <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt;'>See more tags at <a href='tags.html'>HERE</a></p>
-        </section>    
+        </section>     -->
 
     </div>
 
