fix the menu at index page, and fill all footer

--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="_track load-footer" style='background-image:url(assets/imgs/20180629_143535-min.jpg)' id='footer'></footer>
+    <footer class="_track load-footer" id='footer'></footer>
     
     
     <!-- javascript -->
