--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="_track load-footer" id='footer' style='background-image:url(assets/imgs/20180519-hello-min.JPG)'></footer>
+    <footer class="_track load-footer" id='footer'></footer>
     
     
     <!-- javascript -->
