--- a/default.html
+++ b/default.html
@@ -35,7 +35,7 @@
     </div>
 
     <footer id='footer'>
-        <div class='_overlay' style='background-color: rgba(24,24,30, 0.8)'></div>
+        <div class='_overlay' style='background-color: rgb(24,24,30)'></div>
         <div class='_footer-line'>
             <h1>ⓒ 2019. <a href='http://jaihyunp.github.io/'>Jaihyun Park</a></h1>
             <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a></p>
