--- a/posts.html
+++ b/posts.html
@@ -78,7 +78,7 @@
 
 
     <!-- footer -->
-    <footer class="_track load-footer" style='background-image:url(assets/imgs/20180922_183635-min.jpg)' id='footer'></footer>
+    <footer class="_track load-footer" id='footer'></footer>
 
 
     <!-- javascript -->
