--- a/resume.html
+++ b/resume.html
@@ -265,7 +265,7 @@
 
 
     <!-- footer -->
-    <footer class="_track load-footer" id='footer' style='background-image:url(assets/imgs/20190814-sac2019.jpg)'></footer>
+    <footer class="_track load-footer" id='footer'></footer>
 
 
     <!-- javascript -->
