--- a/tags.html
+++ b/tags.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="_track load-footer" id='footer' style='background-image:url(assets/imgs/20180922_183635-min.jpg)'></footer>
+    <footer class="_track load-footer" id='footer'></footer>
 
     <!-- javascript -->
     <script src= "js/jquery.js"></script>
