--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class='load-menubar' style=></div>
+    <div class='load-menubar' style='position:fixed;width:100%;z-index:1'></div>
 
     <!-- header -->
     <header class="_track tall-header fixed" id='header'>
@@ -123,7 +123,7 @@
 
 
     <!-- footer -->
-    <footer class="_track load-footer" id='footer' style='background-color:rgb(24,24,30)'></footer>
+    <footer class="_track load-footer" id='footer'></footer>
 
 
     <!-- javascript -->
